--- a/public/styles/partials/page-give-classes.css
+++ b/public/styles/partials/page-give-classes.css
@@ -115,6 +115,83 @@
     border-top: 1px solid var(--color-line-in-white);
 }
 
+
+/* Modal */
+
+#page-give-classes #modal {
+    background-color: var(--color-primary);
+    background-position: center;
+    background-size: 700px;
+    background-repeat: no-repeat;
+    background-image: url("/images/success-background.svg");
+
+    position: fixed;
+    top: 0;
+    
+    width: 100vw;
+    height: 100vh;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#page-give-classes #modal.hide {
+    display: none;
+}
+
+#page-give-classes #modal .confirmed-register {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#page-give-classes #modal .confirmed-register img {
+
+    height: 9rem;
+    margin-bottom: 2rem;
+}
+
+#modal .confirmed-register strong {
+    font: 700 3.6rem Archivo;
+    line-height: 4.2rem;
+    color: var(--color-title-in-primary);
+}
+
+#page-give-classes #modal .confirmed-register p {
+    text-align: center;
+    max-width: 30rem;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    color: var(--color-text-in-primary);
+    margin-top: 2.4rem;
+}
+
+#page-give-classes #modal .confirmed-register a {
+    width: 20rem;
+    height: 5.6rem;
+    background: var(--color-secondary);
+    color: var(--color-button-text);
+    border: 0;
+    border-radius: .8rem;
+    cursor: pointer;
+    font: 700 1.6rem Archivo;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    transition: 0.2s;
+    margin-top: 3.2rem;
+}
+#page-give-classes #modal .confirmed-register a:hover {
+    background-color: var(--color-secondary-dark);
+}
+
+
+
+
 @media (min-width: 700px) {
     #page-give-classes #container {
         max-width: 100vw;
@@ -150,4 +227,26 @@
         margin-top: 0;
         width: 200px;
     }
+
+    #page-give-classes #modal {
+        background-size: contain;
+    }
+
+    #page-give-classes #modal .confirmed-register img {
+        height: 12rem;
+    }
+
+    #modal .confirmed-register strong {
+        font-size: 5.2rem;
+    }
+
+    #page-give-classes #modal .confirmed-register p {
+        max-width: 1100px;
+    }
+
+    #page-give-classes #modal .confirmed-register a {
+        margin-top: 6.2rem;
+    }
 }
+
+
