--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -131,6 +131,17 @@
         </main>
     </div>
 
+    <!-- Modal -->
+
+    <!-- <div id="modal" class="hide">
+            <div class="confirmed-register">
+                <img src="/images/icons/success-check-icon.svg" alt="Check">
+                <strong>Cadastro salvo!</strong>
+                <p>Tudo certo, seu cadastro está na nossa lsita de professores. <br> Agora é só ficar de olho no seu WhatsApp.</p>
+                <a href="/study" class="button">Acessar lista</a>
+            </div> 
+    </div> -->
+
 
     <script src="/scripts/addField.js"></script>
 </body>
